ostad-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-server-service
  namespace: sady
spec:
  selector:
    app: ostad-server
  ports:
    - port: 5050
      targetPort: 5050
  type: ClusterIP
