ostad-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-ui-service
  namespace: sady
spec:
  selector:
    app: ostad-ui
  ports:
    - port: 80
      targetPort: 5173
  type: ClusterIP
